deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-frontend-app-deployment
spec:
  selector:
    matchLabels:
      app: portfolio-frontend-app
  replicas: 1
  template:
    metadata:
      labels:
        app: portfolio-frontend-app
    spec:
      containers:
        - name: portfolio-frontend-app
          image: pmgysel/portfolio-frontend-app:0.0.1
          ports:
            - containerPort: 8080
