service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-frontend-app-service
spec:
  selector:
    app: portfolio-frontend-app
  ports:
    - port: 8080
      targetPort: 8080
